src/snapshots/csvs_convert__query__tests__query_to_csvs-3.snap
---
source: src/query.rs
expression: lines
---
[
    "id,title",
    "1,game1_add_resource",
    "2,game2_add_resource",
]
