src/snapshots/csvs_convert__query__tests__query_to_parquet-2.snap
---
source: src/query.rs
expression: data
---
[
    [
        BigInt(
            1,
        ),
        Text(
            "game1_add_resource",
        ),
    ],
]
